syntax = "proto3";

package pb;

import "game.proto";

option go_package = "github.com/PlatosCodes/desserted/backend/pb";

message StartGameRequest {
    int64 creator_id  = 1;
    int64 game_id = 2;
}

message StartGameResponse {
    Game game = 1;
}
